workspace = { members = [ "rucimp" ,"./"]  }
[package]
name = "ruci"
version = "0.0.0"
edition = "2021"
 
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
strip = true
debug-assertions = false
#opt-level = 'z' # use this and upx (on windows) will get the smallest binary

[dependencies]
log = "0.4.20"
rand = { version = "0.8.5" , features = ["small_rng" ]}
bytes = "1" #1.5.0
futures = "0.3"
futures-util = "0.3.30"

async-trait = "0.1.77" 

tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.24.0"

lazy_static = "1" #1.4.0
rustls = { version = "0.21" , features = ["dangerous_configuration" ]}  
rustls-pemfile = "1.0"

webpki-roots = "0.22.6"

env_logger = "0.11.1"

sha2 = "0.10.8"
