workspace = { members = [ "rucimp" ,"./", "crates/macro_mapper", "crates/cmd0"]  }
[package]
name = "ruci"
version = "0.0.2"
edition = "2021"
readme = "README.md"
description = "a network proxy framework"
categories = ["network-programming"]
 
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
strip = true
debug-assertions = false
#opt-level = 'z' # use this and upx will get the smallest binary

[dependencies]
log = "0.4.20"
rand = { version = "0.8.5" , features = ["small_rng" ]}
bytes = "1"
futures = "0.3"
futures-util = "0.3.30"
async-trait = "0.1.77" 
tokio = { version = "1", features = ["full"] }
pin-project-lite = "0.2.13"
scopeguard = "1.2.0"
parking_lot = "0.12.1"
lazy_static = "1"

dyn-clone = "1"
anyhow = "1"
typed-builder = "0.18.1"

url = "2"
base64 = "0.21.7"
sha2 = "0.10.8"

tokio-rustls = "0.25.0"
rustls = { version = "0.22" }  
rustls-pemfile = "1.0"
webpki-roots = "0.22.6"

macro_mapper ={ path = "crates/macro_mapper" }

tun2 = { version = "1", features = ["async"] ,optional = true}


[features]
tun = ["tun2"]

trace = []


[dev-dependencies]
env_logger = "0.11.1"
criterion = {version = "0.5.1", features = ["async_tokio"]}

[[bench]]
name = "mathadd"
harness = false

[[bench]]
name = "tls"
harness = false
