workspace = { members = [ "rucimp" ,"./"]  }
[package]
name = "ruci"
version = "0.0.1"
edition = "2021"
 
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
strip = true
debug-assertions = false
#opt-level = 'z' # use this and upx will get the smallest binary

[dependencies]
log = "0.4.20"
rand = { version = "0.8.5" , features = ["small_rng" ]}
bytes = "1"
futures = "0.3"
futures-util = "0.3.30"
async-trait = "0.1.77" 
tokio = { version = "1", features = ["full"] }
pin-project-lite = "0.2.13"
scopeguard = "1.2.0"
parking_lot = "0.12.1"
dyn-clone = "1"

url = "2"
base64 = "0.21.7"

tokio-rustls = "0.25.0"
#rustls = { version = "0.21" , features = ["dangerous_configuration" ]}  
rustls = { version = "0.22" }  
rustls-pemfile = "1.0"
webpki-roots = "0.22.6"

lazy_static = "1"

sha2 = "0.10.8"

[dev-dependencies]
env_logger = "0.11.1"


[target.armv7-unknown-linux-gnueabihf]
linker = "arm-linux-gnueabihf-g++"

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-g++"
