[package]
name = "rucimp"
version = "0.0.0"
edition = "2021"

[dependencies]
ruci = { path = ".." }
bytes = "1" #1.5.0
env_logger = "0.11.1"
log = "0.4.20"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.77" 
futures = "0.3"
futures-lite = "2" #2.2.0
parking_lot = "0.12.1"

toml = "0.8.1"
serde = { version = "1", features = ["derive"] }    #1.0.196