[package]
name = "rucimp"
version = "0.0.4"
edition = "2021"

[dependencies]
ruci = { path = ".." }
bytes = "1"
tracing = "0.1.40"

tokio = { version = "1", features = ["full"] }
async-trait = "0.1.77" 
futures = "0.3"
futures-lite = "2"
parking_lot = "0.12.1"
dyn-clone = "1"
anyhow = "1"
lazy_static = "1"
base64 = "0.21.7"

itertools = "0.12.1"

toml = "0.8.1"
serde = { version = "1", features = ["derive"] }

h2 = "0.4.2"

ipnet = { version = "2.9.0" , optional = true }
iprange = {version = "0.6.7" , optional = true }
regex = {version = "1.10.3" , optional = true }
maxminddb = { version = "0.24", optional = true }

mlua = { version = "0.9.5" , features = ["serialize","async","parking_lot","macros","unstable"] , optional = true }

libc = { version = "0.2", optional = true }

socket2 ={ version = "0.5.6", optional = true } 

native-tls = {version = "0.2.11",features = ["alpn"], optional = true}
tokio-native-tls = {version = "0.3.1", optional = true}

macro_mapper ={ path = "../crates/macro_mapper" }
tokio-tungstenite = "0.21.0"
http = "1.1.0"
thiserror = "1.0.58"

s2n-quic = {version = "1",default-features = false, features = ["provider-address-token-default", "provider-tls-rustls"], optional = true}
s2n-quic-rustls = {version = "0.34.0",optional = true}
rustls = { version = "0.21" ,optional = true ,features = ["dangerous_configuration", "quic"]}  

quinn = {version = "0.10.2",optional = true}

rustls-pemfile = "1.0"

[dev-dependencies]
chrono = "0.4.34"
serde_json = "1.0.114"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["route","geoip"]

quic = ["s2n-quic","s2n-quic-rustls","rustls"]
quinn = ["rustls","dep:quinn"]

tun = ["ruci/tun"]
trace = ["ruci/trace"]

lua = ["mlua/luau"]
lua54 = ["mlua/lua54","mlua/vendored"]

route = ["ipnet" ,"iprange" ,"regex"]

geoip = ["maxminddb", "route"]

sockopt = ["libc", "socket2"]

use-native-tls = ["native-tls","tokio-native-tls"]

native-tls-vendored = ["native-tls/vendored","tokio-native-tls/vendored"]


[[example]]
name = "chain"
required-features = ["lua", "route"]

[[example]]
name = "chain_infinite"
required-features = ["lua", "route"]

[[example]]
name = "chain_trace"
required-features = ["lua", "route"]

[[example]]
name = "shared"
crate-type = ["lib"]
