[package]
name = "rucimp"
version = "0.0.1"
edition = "2021"

[dependencies]
ruci = { path = ".." }
bytes = "1"
env_logger = "0.11.1"
log = "0.4.20"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.77" 
futures = "0.3"
futures-lite = "2"
parking_lot = "0.12.1"
dyn-clone = "1"
anyhow = "1"

toml = "0.8.1"
serde = { version = "1", features = ["derive"] }

ipnet = { version = "2.9.0" , optional = true }
iprange = {version = "0.6.7" , optional = true }
regex = {version = "1.10.3" , optional = true }
maxminddb = { version = "0.24", optional = true }

mlua = { version = "0.9.5" , features = ["serialize","async", "send","parking_lot","luau","macros"] , optional = true }



[features]
default = ["lua", "route","geoip"]
lua = ["mlua"]

route = ["ipnet" ,"iprange" ,"regex"]

geoip = ["maxminddb", "route"]


[[example]]
name = "chain"
required-features = ["lua", "route"]


