[package]
name = "ruci-cmd"
version = "0.0.0"
edition = "2021"

[dependencies]
ruci = { path = "../.." }
rucimp = { path = "../../rucimp" }

log = "0.4.20"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.10"
futures = "0.3"
env_logger = "0.11.1"
anyhow = "1"
bytesize = "1.3.0"
clap = { version = "4.5.1", features = ["derive"] }
axum = {version = "0.7.4", optional = true}

tower = { version = "0.4", features = ["util"] , optional = true}
tower-http = { version = "0.5.0", features = ["fs", "trace"] , optional = true}
tracing = { verison = "0.1", optional = true}
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }


reqwest = { version = "0.11", features = ["json", "stream","native-tls-vendored"] , optional = true}

[features]
default = ["api_server","api_client", "utils"]
api_server = ["axum", "tower", "tower-http","tracing","tracing-subscriber"]
api_client = ["reqwest"]

utils = ["reqwest"]