[package]
name = "ruci-cmd"
version = "0.0.1"
edition = "2021"

[dependencies]
ruci = { path = "../.." }
rucimp = { path = "../../rucimp" }

log = "0.4.20"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.10"
futures = "0.3"
env_logger = "0.11.1"
parking_lot = "0.12.1"

anyhow = "1"
clap = { version = "4.5.1", features = ["derive"] }
bytesize = "1.3.0"


chrono = {version = "0.4.34", optional = true}
axum = {version = "0.7.4", optional = true}
tower = { version = "0.4", features = ["util"] , optional = true}
tower-http = { version = "0.5.0", features = ["fs", "trace","cors"] , optional = true}
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

TinyUFO = {version = "0.1.0", optional = true }
reqwest = { version = "0.11", features = ["json", "stream","native-tls-vendored"] , optional = true}

[features]
default = ["lua"]
lua = ["rucimp/lua"]
api_server = ["chrono","axum", "tower", "tower-http", "tracing-subscriber"]
api_client = ["reqwest"]

utils = ["reqwest"]
trace = ["rucimp/trace","TinyUFO"]
